Ingress/pyui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: pyui-gpt.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pyui-app
            port:
              number: 80
